# darkness

./: .gitignore  .isort.cfg  .pylintrc  LICENSE  Makefile  README.md  anaconda-project.yml  environment.github.yml  pyproject.toml  requirements.build.txt  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: pull-request.yml  python-publish.yml
conda-recipe/: meta.yaml
docs/legacy/app/: main.py
docs/source/: conf.py  index.rst
docs/source/api/: darkness.client.commands.island.rst  darkness.client.commands.islands.rst  darkness.client.commands.metrics.health.rst  darkness.client.commands.metrics.rst  darkness.client.commands.rst  darkness.client.rst  darkness.rst  darkness.sdk.common.config.rst  darkness.sdk.common.rst  darkness.sdk.contracts.dtos.rst  darkness.sdk.contracts.dtos.sdk.requests.island.rst  darkness.sdk.contracts.dtos.sdk.requests.rst  darkness.sdk.contracts.dtos.sdk.responses.island.rst  darkness.sdk.contracts.dtos.sdk.responses.islands.rst  darkness.sdk.contracts.dtos.sdk.responses.rst  darkness.sdk.contracts.dtos.sdk.rst  darkness.sdk.contracts.errors.common.rst  darkness.sdk.rst  (+14 more)
infra/: NOTES.txt  mongodb.sh
infra/kubernetes/: README.md  dashboard.txt  k3s.txt  mongodb.yaml
infra/local/: 01_mongodb_setup.sh  02_state_setup.sh  03_mongodb_run.sh  04_state_run.sh  05_chrono_run.sh  chrono.sh  darkness.sh  mongodb.sh  requirements.server.txt  shutdown.sh  startup.sh
legacy/: anaconda-project.yml  darkness.py  scratch.py  setup.cfg.off
requirements/: requirements.build.txt  requirements.docs.txt  requirements.test.txt  requirements.txt
resources/: helm-setup.sh  prepare.sh
tests/integration/: anaconda-project.yml  requirements.txt  test.py
(+225 files in other folders)
