[metadata]
name = shapeandshare.darkness
version = 0.1.1
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = Darkness
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.10
install_requires =
    fastapi
    pydantic
    uvicorn

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        darkness = shapeandshare.darkness.server.main:main
